Fix dashboard potiioning on mobile

--- a/app/assets/stylesheets/themes/home.css.sass
+++ b/app/assets/stylesheets/themes/home.css.sass
@@ -105,7 +105,7 @@
           +simple-blurb
 
     figure.image
-      top: 368px + $line-height
+      top: 368px + $line-height !important
 
   // Screen > 720px ////////////////////////////////////////////////////////////////////////////////////////////////////
 
